--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -623,7 +623,7 @@
             </objects>
             <point key="canvasLocation" x="410" y="317"/>
         </scene>
-        <!--Wanna Help?-->
+        <!--Give Help-->
         <scene sceneID="rWF-6F-J2K">
             <objects>
                 <tableViewController id="i1D-Sd-Pla" customClass="HomeTableViewController" customModule="helpr" customModuleProvider="target" sceneMemberID="viewController">
@@ -664,7 +664,7 @@
                             <outlet property="delegate" destination="i1D-Sd-Pla" id="4mA-D1-rmw"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Wanna Help?" id="VUb-dP-b77"/>
+                    <navigationItem key="navigationItem" title="Give Help" id="VUb-dP-b77"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C1w-u1-oej" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -958,14 +958,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NCW-iD-t7e">
                                 <rect key="frame" x="10" y="305" width="580" height="115"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qsy-2o-BBh">
-                                        <rect key="frame" x="8" y="37" width="584" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="wLk-bG-QXO"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I Am Helping With:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTE-Nq-XME">
                                         <rect key="frame" x="8" y="8" width="161" height="21"/>
                                         <constraints>
@@ -998,6 +990,14 @@
                                             <action selector="withdrawButtonPressed:" destination="pZh-sY-qgU" eventType="touchUpInside" id="Rfo-YH-4TP"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qsy-2o-BBh">
+                                        <rect key="frame" x="8" y="37" width="428" height="70"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="70" id="wLk-bG-QXO"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="0.96999999999999997" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -1005,7 +1005,7 @@
                                     <constraint firstItem="i9C-Qu-zug" firstAttribute="top" secondItem="Qsy-2o-BBh" secondAttribute="bottom" constant="16" id="3cl-5Q-qam"/>
                                     <constraint firstItem="i9C-Qu-zug" firstAttribute="trailing" secondItem="NCW-iD-t7e" secondAttribute="trailingMargin" id="5tX-c7-XeF"/>
                                     <constraint firstItem="JTE-Nq-XME" firstAttribute="top" secondItem="NCW-iD-t7e" secondAttribute="topMargin" id="JKD-kA-5s5"/>
-                                    <constraint firstItem="Qsy-2o-BBh" firstAttribute="trailing" secondItem="NCW-iD-t7e" secondAttribute="trailingMargin" constant="20" id="M19-Bz-j0M"/>
+                                    <constraint firstItem="Qsy-2o-BBh" firstAttribute="trailing" secondItem="NCW-iD-t7e" secondAttribute="trailingMargin" constant="-136" id="M19-Bz-j0M"/>
                                     <constraint firstAttribute="height" constant="115" id="Npo-zz-iOF"/>
                                     <constraint firstAttribute="bottom" secondItem="i9C-Qu-zug" secondAttribute="bottom" constant="8" id="Wds-i6-F5n"/>
                                     <constraint firstAttribute="width" constant="580" id="bAz-FQ-EDV"/>
@@ -1219,7 +1219,7 @@
                         <segue destination="JdN-7q-oL3" kind="relationship" relationship="viewControllers" id="qpX-H0-EZH"/>
                         <segue destination="uVc-qV-5XT" kind="relationship" relationship="viewControllers" id="cts-Og-6g0"/>
                         <segue destination="XeQ-0J-Fby" kind="relationship" relationship="viewControllers" id="Bbd-eI-nBl"/>
-                        <segue destination="jvV-aH-ANQ" kind="relationship" relationship="viewControllers" id="9we-Er-sMR"/>
+                        <segue destination="skR-fT-8RR" kind="relationship" relationship="viewControllers" id="4ya-Ru-U0E"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aOm-vH-com" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1336,7 +1336,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aj4-A4-OAM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4610" y="1715"/>
+            <point key="canvasLocation" x="5278" y="1723"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="c7G-aQ-2ed">
@@ -1382,33 +1382,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ktL-9x-9ug" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3942" y="1715"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="ctd-bX-QuT">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jvV-aH-ANQ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="Chat" id="x16-ym-Uuz">
-                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
-                    </tabBarItem>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5eM-5z-fL1">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <textAttributes key="titleTextAttributes">
-                            <fontDescription key="fontDescription" type="system" pointSize="34"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </textAttributes>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="8df-Rl-lI9" kind="relationship" relationship="rootViewController" id="pzQ-R2-cuK"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Eja-9B-f0g" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1191" y="1041"/>
+            <point key="canvasLocation" x="4610" y="1723"/>
         </scene>
         <!--Messages-->
         <scene sceneID="TPx-xi-6GH">
@@ -1440,7 +1414,32 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3SW-yF-KNT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1191" y="1729"/>
+            <point key="canvasLocation" x="1191" y="1767"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="oTV-0H-AMA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="skR-fT-8RR" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="Chat" id="atP-w9-r4W">
+                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-6"/>
+                    </tabBarItem>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="afH-vc-abY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8df-Rl-lI9" kind="relationship" relationship="rootViewController" id="pWs-I4-mwy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CSO-ox-qbe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1191" y="1041"/>
         </scene>
     </scenes>
     <resources>
@@ -1450,8 +1449,8 @@
         <image name="Home" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ibn-0L-JYp"/>
         <segue reference="rJU-rD-EcA"/>
+        <segue reference="Ibn-0L-JYp"/>
         <segue reference="geU-F1-ySP"/>
     </inferredMetricsTieBreakers>
 </document>
