--- a/Launch Screen.xib
+++ b/Launch Screen.xib
@@ -10,25 +10,33 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="helpr" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TyR-jU-OCn">
-                    <rect key="frame" x="8" y="178" width="464" height="80"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch" translatesAutoresizingMaskIntoConstraints="NO" id="171-MY-MtO">
+                    <rect key="frame" x="140" y="140" width="200" height="200"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="80" id="NjO-Vg-COo"/>
-                        <constraint firstAttribute="width" constant="464" id="eY5-g4-EbW"/>
+                        <constraint firstAttribute="height" constant="200" id="mW4-cV-BX8"/>
+                        <constraint firstAttribute="width" constant="200" id="wxp-xg-pCR"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="TyR-jU-OCn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="178" id="eKq-J5-rS6"/>
-                <constraint firstItem="TyR-jU-OCn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="tR0-4x-W3o"/>
+                <constraint firstItem="171-MY-MtO" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="3wr-oi-q5c"/>
+                <constraint firstItem="171-MY-MtO" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="90" id="DSV-jS-vcR"/>
+                <constraint firstItem="171-MY-MtO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="nYq-gK-DQw"/>
+                <constraint firstItem="171-MY-MtO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="90" id="onW-hs-72Q"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="DSV-jS-vcR"/>
+                    <exclude reference="onW-hs-72Q"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="404" y="445"/>
         </view>
     </objects>
+    <resources>
+        <image name="Launch" width="300" height="300"/>
+    </resources>
 </document>
