--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -5,6 +5,70 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Page View Controller-->
+        <scene sceneID="7zn-3q-eto">
+            <objects>
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Rkm-2t-fRO" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E7q-k4-tuy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="403" y="-371"/>
+        </scene>
+        <!--Content View Controller-->
+        <scene sceneID="7Ai-aD-cRa">
+            <objects>
+                <viewController storyboardIdentifier="ContentViewController" id="yIc-cv-h8g" customClass="ContentViewController" customModule="helpr" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ScQ-Oy-9XR"/>
+                        <viewControllerLayoutGuide type="bottom" id="j21-OT-4z2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mq4-HA-Pb6">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDX-Kg-SVV">
+                                <rect key="frame" x="140" y="550" width="320" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="LiZ-au-Vkg"/>
+                                    <constraint firstAttribute="height" constant="50" id="Q3L-i0-J43"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7rz-Bu-tka">
+                                <rect key="frame" x="125" y="70" width="350" height="472"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="350" id="Lev-SW-YGk"/>
+                                    <constraint firstAttribute="height" constant="350" id="oCO-9F-OYU"/>
+                                    <constraint firstAttribute="width" constant="170" id="uvt-Xs-5vt"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="oCO-9F-OYU"/>
+                                        <exclude reference="uvt-Xs-5vt"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="j21-OT-4z2" firstAttribute="top" secondItem="FDX-Kg-SVV" secondAttribute="bottom" id="XPm-lN-lqB"/>
+                            <constraint firstItem="7rz-Bu-tka" firstAttribute="centerX" secondItem="mq4-HA-Pb6" secondAttribute="centerX" id="gAf-Ir-sAU"/>
+                            <constraint firstAttribute="centerX" secondItem="7rz-Bu-tka" secondAttribute="centerX" id="ioM-Qw-glN"/>
+                            <constraint firstAttribute="centerX" secondItem="FDX-Kg-SVV" secondAttribute="centerX" id="ioo-Db-veA"/>
+                            <constraint firstItem="7rz-Bu-tka" firstAttribute="top" secondItem="ScQ-Oy-9XR" secondAttribute="bottom" constant="50" id="ng0-Jo-0Bk"/>
+                            <constraint firstItem="FDX-Kg-SVV" firstAttribute="top" secondItem="7rz-Bu-tka" secondAttribute="bottom" constant="8" id="x5Z-ak-qdA"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="7rz-Bu-tka" id="rnl-pz-c0L"/>
+                        <outlet property="titleLabel" destination="FDX-Kg-SVV" id="btR-OR-uf2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D6g-gq-hU7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1191" y="-371"/>
+        </scene>
         <!--Start-->
         <scene sceneID="GPC-f2-jzn">
             <objects>
@@ -17,47 +81,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="Zkb-WO-Doy">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="e9M-8w-lPe">
-                                <rect key="frame" x="200" y="95" width="200" height="200"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="h" translatesAutoresizingMaskIntoConstraints="NO" id="MLB-bH-NA4">
+                                <rect key="frame" x="273" y="20" width="55" height="55"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="PXG-U1-MYz"/>
-                                    <constraint firstAttribute="width" constant="200" id="g1c-UG-OKg"/>
-                                    <constraint firstAttribute="height" constant="200" id="ylU-8R-AgL"/>
+                                    <constraint firstAttribute="width" constant="55" id="3GX-Eh-cgk"/>
+                                    <constraint firstAttribute="height" constant="55" id="Cnv-VS-mTd"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="PXG-U1-MYz"/>
-                                    </mask>
-                                </variation>
                             </imageView>
                         </subviews>
+                        <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="e9M-8w-lPe" firstAttribute="centerX" secondItem="T73-2D-uoa" secondAttribute="centerX" id="NC2-bo-GCq"/>
-                            <constraint firstItem="Zkb-WO-Doy" firstAttribute="bottom" secondItem="sIA-o1-TH8" secondAttribute="top" id="e9j-09-cTp"/>
-                            <constraint firstItem="Zkb-WO-Doy" firstAttribute="leading" secondItem="T73-2D-uoa" secondAttribute="leading" id="ja5-Tv-5mR"/>
-                            <constraint firstItem="e9M-8w-lPe" firstAttribute="top" secondItem="iqL-eS-cRh" secondAttribute="bottom" constant="75" id="nPW-oC-oow"/>
-                            <constraint firstItem="Zkb-WO-Doy" firstAttribute="centerX" secondItem="e9M-8w-lPe" secondAttribute="centerX" id="o8r-fR-96p"/>
-                            <constraint firstItem="Zkb-WO-Doy" firstAttribute="centerX" secondItem="e9M-8w-lPe" secondAttribute="centerX" id="rpd-Fx-Ny5"/>
-                            <constraint firstItem="Zkb-WO-Doy" firstAttribute="top" secondItem="T73-2D-uoa" secondAttribute="top" id="wPP-EZ-6Ol"/>
+                            <constraint firstItem="MLB-bH-NA4" firstAttribute="top" secondItem="iqL-eS-cRh" secondAttribute="bottom" id="NY9-JT-NhA"/>
+                            <constraint firstItem="MLB-bH-NA4" firstAttribute="centerX" secondItem="T73-2D-uoa" secondAttribute="centerX" id="mVh-wH-YIw"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="rpd-Fx-Ny5"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
-                        <outlet property="icon" destination="e9M-8w-lPe" id="ash-AE-y5e"/>
+                        <outlet property="icon" destination="MLB-bH-NA4" id="00D-jo-KJk"/>
                         <segue destination="maK-rD-6h8" kind="show" identifier="toTabBarController" id="Ibn-0L-JYp"/>
                         <segue destination="oPN-vH-9a3" kind="show" identifier="toZipcode" id="dUb-hW-mTY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="req-RK-lzK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="403" y="317"/>
+            <point key="canvasLocation" x="403" y="323"/>
         </scene>
         <!--Zip Code View Controller-->
         <scene sceneID="pDr-yd-CrC">
@@ -141,7 +187,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="caI-DV-ohC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="403" y="984"/>
+            <point key="canvasLocation" x="403" y="1041"/>
         </scene>
         <!--Chat View Controller-->
         <scene sceneID="2j7-Qf-cUC">
@@ -1103,14 +1149,13 @@
     </scenes>
     <resources>
         <image name="?" width="30" height="30"/>
-        <image name="Background" width="414" height="736"/>
         <image name="Chat" width="30" height="30"/>
         <image name="Handshake" width="30" height="30"/>
         <image name="Home" width="30" height="30"/>
-        <image name="Icon" width="300" height="300"/>
+        <image name="h" width="300" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ibn-0L-JYp"/>
         <segue reference="OKq-df-Zzw"/>
+        <segue reference="Ibn-0L-JYp"/>
     </inferredMetricsTieBreakers>
 </document>
