--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -651,7 +651,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIN-aa-AyS">
-                                <rect key="frame" x="10" y="83" width="574" height="60"/>
+                                <rect key="frame" x="10" y="74" width="574" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="574" id="Tbu-yR-Qa4"/>
                                     <constraint firstAttribute="height" constant="60" id="iCo-5s-tGh"/>
@@ -661,7 +661,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sp6-ae-KqV">
-                                <rect key="frame" x="225" y="135" width="150" height="21"/>
+                                <rect key="frame" x="225" y="129" width="150" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="HLD-9A-vhU"/>
                                     <constraint firstAttribute="width" constant="150" id="Vdx-6y-dcU"/>
@@ -737,10 +737,10 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P4x-tA-1OS">
                                 <rect key="frame" x="10" y="195" width="580" height="110"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbh-3W-Pgj">
-                                        <rect key="frame" x="8" y="37" width="564" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbh-3W-Pgj">
+                                        <rect key="frame" x="8" y="37" width="428" height="70"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="PES-2g-uGq"/>
+                                            <constraint firstAttribute="height" constant="70" id="PES-2g-uGq"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="highlightedColor"/>
@@ -781,8 +781,8 @@
                                     <constraint firstItem="xbh-3W-Pgj" firstAttribute="leading" secondItem="P4x-tA-1OS" secondAttribute="leadingMargin" id="3Hi-aQ-Agi"/>
                                     <constraint firstItem="xbh-3W-Pgj" firstAttribute="top" secondItem="P4x-tA-1OS" secondAttribute="top" constant="37" id="5tw-hc-9cg"/>
                                     <constraint firstItem="xbh-3W-Pgj" firstAttribute="leading" secondItem="EOC-Nj-WaP" secondAttribute="leading" id="9an-Ug-abE"/>
-                                    <constraint firstItem="xbh-3W-Pgj" firstAttribute="trailing" secondItem="SRO-eg-1m2" secondAttribute="trailing" id="A4Q-51-UlI"/>
-                                    <constraint firstItem="xbh-3W-Pgj" firstAttribute="trailing" secondItem="P4x-tA-1OS" secondAttribute="trailingMargin" id="Z7R-xb-TBv"/>
+                                    <constraint firstItem="xbh-3W-Pgj" firstAttribute="trailing" secondItem="SRO-eg-1m2" secondAttribute="trailing" constant="-136" id="A4Q-51-UlI"/>
+                                    <constraint firstItem="xbh-3W-Pgj" firstAttribute="trailing" secondItem="P4x-tA-1OS" secondAttribute="trailingMargin" constant="-136" id="Z7R-xb-TBv"/>
                                     <constraint firstItem="xbh-3W-Pgj" firstAttribute="top" secondItem="EOC-Nj-WaP" secondAttribute="bottom" constant="8" symbolic="YES" id="cw8-9k-Pt7"/>
                                     <constraint firstItem="SRO-eg-1m2" firstAttribute="top" secondItem="xbh-3W-Pgj" secondAttribute="bottom" constant="15" id="dcN-E9-fiY"/>
                                     <constraint firstAttribute="height" constant="110" id="gDQ-xh-Fck"/>
@@ -797,7 +797,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="Sp6-ae-KqV" firstAttribute="top" secondItem="hBj-A6-S0A" secondAttribute="bottom" constant="71" id="4z6-FY-0g6"/>
+                            <constraint firstItem="Sp6-ae-KqV" firstAttribute="top" secondItem="hBj-A6-S0A" secondAttribute="bottom" constant="65" id="4z6-FY-0g6"/>
                             <constraint firstAttribute="bottom" secondItem="P4x-tA-1OS" secondAttribute="bottom" constant="295" id="9Hf-Hz-Dz8"/>
                             <constraint firstItem="NCW-iD-t7e" firstAttribute="top" secondItem="P4x-tA-1OS" secondAttribute="bottom" constant="10" id="9qR-pA-yuS"/>
                             <constraint firstItem="scF-9c-kfX" firstAttribute="leading" secondItem="86W-Dk-58D" secondAttribute="leadingMargin" constant="-6" id="DWL-iS-7Wf"/>
@@ -809,7 +809,7 @@
                             <constraint firstItem="P4x-tA-1OS" firstAttribute="leading" secondItem="NCW-iD-t7e" secondAttribute="leading" id="fii-Bw-MTi"/>
                             <constraint firstItem="Sp6-ae-KqV" firstAttribute="centerX" secondItem="HIN-aa-AyS" secondAttribute="centerX" constant="3" id="ii8-NV-gB1"/>
                             <constraint firstItem="P4x-tA-1OS" firstAttribute="trailing" secondItem="NCW-iD-t7e" secondAttribute="trailing" id="mUc-Hy-9aQ"/>
-                            <constraint firstItem="HIN-aa-AyS" firstAttribute="top" secondItem="hBj-A6-S0A" secondAttribute="bottom" constant="19" id="nOJ-zH-M0H"/>
+                            <constraint firstItem="HIN-aa-AyS" firstAttribute="top" secondItem="hBj-A6-S0A" secondAttribute="bottom" constant="10" id="nOJ-zH-M0H"/>
                             <constraint firstItem="scF-9c-kfX" firstAttribute="centerX" secondItem="NCW-iD-t7e" secondAttribute="centerX" id="skm-vT-EM1"/>
                             <constraint firstItem="s7P-30-puK" firstAttribute="top" secondItem="scF-9c-kfX" secondAttribute="bottom" constant="66" id="tGy-3w-u23"/>
                             <constraint firstAttribute="trailingMargin" secondItem="scF-9c-kfX" secondAttribute="trailing" constant="-6" id="wV0-hm-aZS"/>
